--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ matplotlib==3.6.3
 numpy==1.22.4
 pandas==1.4.4
 seaborn==0.12.2
+scikit-learn==1.1.3
 streamlit==1.17.0
 streamlit_extras==0.2.5
 imblearn
